--- a/index.html
+++ b/index.html
@@ -1,15 +1,33 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8"><script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="js/app.js" charset="utf-8"></script>
     <link rel="stylesheet" href="css/style.css">
+
     </style>
 
-</script>
     <title>WDI project one</title>
   </head>
   <body>
+    <h1>Memzy: Test you memory.</h1>
+    <h2 class="message">Let's play!</h2>
+    <div class="outline">
+      <div class="symbols"></div>
+      <div class="symbols"></div>
+      <div class="symbols"></div>
+      <div class="symbols"></div>
+      <div class="symbols"></div>
+      <div class="symbols"></div>
+      <div class="symbols"></div>
+      <div class="symbols"></div>
+      <div class="symbols"></div>
+      <div class="symbols"></div>
+      <div class="symbols"></div>
+      <div class="symbols"></div>
+    </div>
+
+    <button class="reset">restart</button>
 
   </body>
 </html>
