not done much, adding a few features... non working yet.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="js/app.js" charset="utf-8"></script>
     <link rel="stylesheet" href="css/style.css">
@@ -20,6 +21,7 @@
 </head>
 
 <body>
+  <h1> Memzy: The worlds hardest game - ever.</h1>
   <div class="container">
     <div class="symbol"></div>
     <div class="symbol"></div>
@@ -33,7 +35,13 @@
     <div class="symbol"></div>
     <div class="symbol"></div>
     <div class="symbol"></div>
+    <aside>
+      <span> Score: </span>
+      <span> Lives: </span>
+      <span> Restart </span>
+    </aside>
   </div>
+
 </body>
 
 </html>
