got the show button working..harder then i thought.

--- a/index.html
+++ b/index.html
@@ -22,19 +22,21 @@
 
 <body>
   <h1> Memzy: The worlds hardest game - ever.</h1>
+  <button class='clicky'>show</button>
   <div class="container">
-    <div class="symbol"></div>
-    <div class="symbol"></div>
-    <div class="symbol"></div>
-    <div class="symbol"></div>
-    <div class="symbol"></div>
-    <div class="symbol"></div>
-    <div class="symbol"></div>
-    <div class="symbol"></div>
-    <div class="symbol"></div>
-    <div class="symbol"></div>
-    <div class="symbol"></div>
-    <div class="symbol"></div>
+
+    <div class="symbol" id="symbol1" ></div>
+    <div class="symbol" id="symbol2" ></div>
+    <div class="symbol" id="symbol3" ></div>
+    <div class="symbol" id="symbol4" ></div>
+    <div class="symbol" id="symbol5" ></div>
+    <div class="symbol" id="symbol6" ></div>
+    <div class="symbol" id="symbol7" ></div>
+    <div class="symbol" id="symbol8" ></div>
+    <div class="symbol" id="symbol9" ></div>
+    <div class="symbol" id="symbol10" ></div>
+    <div class="symbol" id="symbol11" ></div>
+    <div class="symbol" id="symbol12" ></div>
     <aside>
       <span> Score: </span>
       <span> Lives: </span>
