--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body background="bkgrnd.jpg">
   <div id="bg"></div>
 
-  <h1> Memzy: The worlds hardest game - ever.</h1>
+  <h1> Memzy&#8482;: The world's hardest game - ever.</h1>
 
   <div class="gameContainer">
     <div class="container">
@@ -43,7 +43,7 @@
     </div>
     <aside>
       <h3>
-        <strong>Memzy is a game that will test your memory...</strong></br></br>
+        <strong>Memzy&#8482; is a game that will test your memory...</strong></br></br>
       </h3>
       <h4>
         Clicking 'Begin Game!' will give you a short ammount of time to see the symbols, signalled with the timer, beneath.</br></br>
@@ -56,7 +56,7 @@
       <p class='statsLeft'>Matches: <span class='matches'>0</span></p>
       <p class='statsLeft'>Lives left: <span class='lives'>10</span></p>
       <p class='statsLeft'>Time left:<span id='timer'>60</span></p>
-      <span> Restart </span>
+      <span><button type="button" name="restart" class="restart">Restart</button></span>
     </aside>
   </div>
 </body>
